--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,19 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body {
+    background-image: url("https://images.alphacoders.com/551/thumb-1920-5513.jpg");
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.counter {
+    font-family: 'Source Code Pro', monospace;
+}
 
-*/
+.container {
+    background-color: rgba(255, 255, 255, 0.5) ();
+    color:green;
+    padding-top: 5rem;
+    border-radius: 2rem;
+    padding-bottom: 5rem;
+    font-size: 10rem;
+    width: 45rem;
+}
